--- a/SF.SGL.UI/SF.SGL.UI.csproj
+++ b/SF.SGL.UI/SF.SGL.UI.csproj
@@ -5,17 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\css\open-iconic.odl\**" />
+    <Content Remove="wwwroot\css\open-iconic.odl\**" />
+    <EmbeddedResource Remove="wwwroot\css\open-iconic.odl\**" />
+    <None Remove="wwwroot\css\open-iconic.odl\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Pages\Sistema\Incluir.cshtml.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Remove="Pages\Sistema\Incluir.cshtml" />
+    <Content Remove="Shared\SurveyPrompt.razor" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="3.11.1" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
