--- a/SF.SGL.UI/SF.SGL.UI.csproj
+++ b/SF.SGL.UI/SF.SGL.UI.csproj
@@ -1,35 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="wwwroot\css\open-iconic.odl\**" />
-    <Content Remove="wwwroot\css\open-iconic.odl\**" />
-    <EmbeddedResource Remove="wwwroot\css\open-iconic.odl\**" />
-    <None Remove="wwwroot\css\open-iconic.odl\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Pages\Cadastros\Sistemas\Incluir.cshtml.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Remove="Pages\Cadastros\Sistemas\Incluir.cshtml" />
-    <Content Remove="Shared\NavMenu.razor" />
-    <Content Remove="Shared\SurveyPrompt.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Shared\NavMenu.razor.css" />
-  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-    <PackageReference Include="Radzen.Blazor" Version="3.11.1" />
+    <PackageReference Include="Radzen.Blazor" Version="3.11.2" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
