[Monteiro] Alteração layout.

--- a/SF.SGL.API/SF.SGL.API.csproj
+++ b/SF.SGL.API/SF.SGL.API.csproj
@@ -29,7 +29,7 @@
   <ItemGroup>
     <Folder Include="Funcionalidades\Consultas\LogOperacao\" />
     <Folder Include="Funcionalidades\Consultas\LogAuditoria\" />
-    <Folder Include="Funcionalidades\Parametizacoes\ExpurgoLogs\" />
+    <Folder Include="Funcionalidades\Parametizacoes\ExpurgoLogs\EditaParametrizacao\" />
     <Folder Include="Funcionalidades\Parametizacoes\PermissoesAcessoLogs\" />
   </ItemGroup>
 
