[Monteiro] Subida de versão .NET de 5 para 6. Remoção temporária dos projetos de testes.

--- a/SF.SGL.API/appsettings.json
+++ b/SF.SGL.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DetaultConnection": "Data Source=COMPUTADOR01\\SQLEXPRESS;Initial Catalog=SGL;Integrated Security=True"
+    "DetaultConnection": "Data Source=fwdbco03.sf-teste.local\\instweb01;Initial Catalog=SGL;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
