[Monteiro] - Ajustes pontuais. Rotina de envio de email (provisório).

--- a/SF.SGL.API/appsettings.json
+++ b/SF.SGL.API/appsettings.json
@@ -9,5 +9,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "DefaultCredentials": false,
+    "Port": 465,
+    "SenderName": "SF DEV Lab",
+    "SenderEmail": "sf.sp.laboratorio@gmail.com",
+    "UserName": "sf.sp.laboratorio",
+    "Password": "Sflab2021",
+    "SSL": true
+  },
   "AllowedHosts": "*"
 }
