[Monteiro] Tela de Login, pre subida gitlab.

--- a/SF.SGL.UI/wwwroot/appsettings.json
+++ b/SF.SGL.UI/wwwroot/appsettings.json
@@ -1,3 +1,10 @@
 {
-  "EnderecoBaseSGLAPI": "https://localhost:44351/"
+  "EnderecoBaseSGLAPI": "https://localhost:5011/",
+
+  "JWT_AUTHORITY": "https://keycloak.apps.sf.prefeitura.sp.gov.br/auth/realms/SF-APPS",
+  "JWT_CLIENT_ID": "sgl",
+  "JWT_RESPONSE_TYPE": "code",
+  "JWT_RESPONSE_MODE": "fragment",
+  "NOME": "Sistema de Gestao de Logs",
+  "VERSAO": "0.0.1"
 }
